fix(StageButton): update box-shadow and color for better visibility

--- a/src/App.css
+++ b/src/App.css
@@ -383,6 +383,7 @@
   --border-radius-clickable: 10px;
   --color-text-light-purple: #e0d4de;
   --color-text-super-light-purple: #f5f0f3;
+  --color-text-light-pink: #fff0f2;
   font-family: 'PT Sans', Arial, sans-serif;
   min-height: 100vh;
   display: flex;
